Agregué puestos laborales

--- a/index.html
+++ b/index.html
@@ -47,25 +47,27 @@
                 <div class="col-wide job-description">
                     <ul>
                         <li>Focused on helping foreign SMEs reach Latin-American markets. Services: business advisor,
-                        representative, market researcher, staff member, lobbyist.</li>
-                       <li>Content writing on business and political theory.</li> <br>
-                       <p>See more at <a href="http://www.franciscopaterson.com/blog" target="_blank">www.franciscopaterson.com/blog</a>.</p>
+                            representative, market researcher, staff member, lobbyist.</li>
+                        <li>Content writing on business and political theory.</li> <br>
+                        <p>See more at <a href="http://www.franciscopaterson.com/blog"
+                                target="_blank">www.franciscopaterson.com/blog</a>.</p>
                 </div>
 
                 <div class="col-narrow">
                     <h3> Project #2: <br>
                         CEO/Dating app co-creator </h3>
-                        <p class="uppercase">Freelance</p>
+                    <p class="uppercase">Freelance</p>
                     <p>April 2018 - July 2019</p>
                 </div>
 
                 <div class="col-wide job-description">
                     <ul>
-                       <li>Leader of a team including a designer, and a developer.</li>
-                       <li>Developed wireframes and application drafts.</li> 
-                       <li>Drafted marketing plans and business model canvas.</li>
-                       <li>Supervised the development of the Minimum Viable Product (MVP).</li>  <br>
-                       <p> See more at <a href="https://github.com/fpaterson/HiddnApp"target="_blank">github.com/fpaterson/HiddnApp</a>.</p>
+                        <li>Leader of a team including a designer, and a developer.</li>
+                        <li>Developed wireframes and application drafts.</li>
+                        <li>Drafted marketing plans and business model canvas.</li>
+                        <li>Supervised the development of the Minimum Viable Product (MVP).</li> <br>
+                        <p> See more at <a href="https://github.com/fpaterson/HiddnApp"
+                                target="_blank">github.com/fpaterson/HiddnApp</a>.</p>
                     </ul>
                 </div>
 
@@ -77,12 +79,76 @@
                 </div>
 
                 <div class="col-wide job-description">
-                    <ul> 
-                      <li> Arranged meetings to be held at the office of Argentine Congressman Juan Carlos Villalonga, former director of Greenpeace Argentina.</li>
-                      <li> Participated in meetings held by the Energy Committee at the Argentine House of Representatives.</li>
-                      <li> Drafted the Business Model Canvas.</li> <br>
-                      <p> See more at <a href="http://energiasocialar.com"target="_blank">www.energiasocialar.com</a>.</p>
+                    <ul>
+                        <li>Arranged meetings to be held at the office of Argentine Congressman Juan Carlos Villalonga,
+                            former director of Greenpeace Argentina.</li>
+                        <li>Participated in meetings held by the Energy Committee at the Argentine House of
+                            Representatives.</li>
+                        <li>Drafted the Business Model Canvas.</li> <br>
+                        <p>See more at <a href="http://energiasocialar.com" target="_blank">www.energiasocialar.com</a>.
+                        </p>
                 </div>
+
+                <div class="col-narrow">
+                    <h3>Project #4: <br>
+                        CMO/Lobbyist and business developer</h3>
+                    <p class="uppercase">Scalabl company builder</p>
+                    <p>January 2016 - July 2018</p>
+                </div>
+
+                <div class="col-wide job-description">
+                    <ul>
+                        <li>Free press: managed to get an article published in Forbes Argentina.</li>
+                        <li>Developed a network of contacts from domestic and international government agencies and
+                            entities (GCBA, Enterprise Singapore, Invest HK, CORFO Chile, Association of Argentines in
+                            China, consulates and embassies).</li>
+                        <li>Linked and strengthened relations between Scalabl and other players of the domestic and
+                            international entrepreneurial ecosystem.</li>
+                        <li>Teamed up with the company’s global CEO to expand promotional messages all over the world.
+                        </li>
+                        <li>Generated content for the company’s website.</li>
+                        <li>Generated and followed-up new contacts through the use of a CRM (Streak) and the application
+                            of a sales funnel.</li>
+                    </ul>
+                </div>
+
+                <h3 class="titulo-generico">Management auditor at public agencies</h3>
+
+                <div class="col-narrow">
+                    <h3>Auditing Officer</h3>
+                    <p class="uppercase">Teatro Colón Opera House</p>
+                    <p>January - December 2016</p>
+                </div>
+
+                <div class="col-wide job-description">
+                    <ul>
+                        <li>Updated management indicators.</li>
+                        <li>Made proposals aimed at increasing income and/or branding opportunities.</li>
+                        <li>Analyzed and assessed the box office operation and proposed relevant improvement actions.
+                        </li>
+                        <li>Ad Hoc supervised operation at the box office, at the request of the General Manager.</li>
+                    </ul>
+                </div>
+
+                <div class="col-narrow">
+                    <h3>Auditing Officer</h3>
+                    <p class="uppercase">Ministry of Environment and Public Spaces, BA City</p>
+                    <p>January 2012 - December 2015</p>
+                </div>
+
+                <div class="col-wide job-description">
+                    <ul>
+                        <li>Gathered data related to targets, policies, programs, and projects.</li>
+                        <li>Monitored and assessed their progress through a balanced scorecard.</li>
+                        <li>Acted as a strategic liaison with the Head of Cabinet of Ministers.</li>
+                        <li>Provided assistance with the design and implementation of management tools.</li>
+                        <li>Implemented an effective way of data gathering meeting the required deadlines (three-week
+                            cycles).</li>
+                    </ul>
+
+                </div>
+
+
 
                 UNDER CONSTRUCTION
 
@@ -104,7 +170,8 @@
                 <p>Front-end development course</p>
 
                 <h3>Harvard University, Kennedy School Executive Education, 2018</h3>
-                <p>“Creating Collaborative Solutions: Innovations in Governance” <br> Management course focused on inter-institutional collaboration for the joint creation of public value.</p>
+                <p>“Creating Collaborative Solutions: Innovations in Governance” <br> Management course focused on
+                    inter-institutional collaboration for the joint creation of public value.</p>
 
                 <h3>Georgetown University (Washington D.C.)/Universidad de San Martín (Buenos Aires), 2019</h3>
                 <p>Joint bilingual M.A. in Development Management and Policy.</p>
