terminé descripción laboral

--- a/index.html
+++ b/index.html
@@ -145,12 +145,44 @@
                         <li>Implemented an effective way of data gathering meeting the required deadlines (three-week
                             cycles).</li>
                     </ul>
+                </div>
+
+                <h3 class="titulo-generico">Administrative clerk</h3>
+
+                <div class="col-narrow">
+                    <h3>Real Estate Administrative Assistant</h3>
+                    <p class="uppercase">Reynolds Propiedades S.A.</p>
+                    <p>July 2007 - November 2011</p>
+                </div>
+
+                <div class="col-wide job description">
+                    <ul>
+                        <li>Supported the branch Financial Manager in accounting and administrative tasks.</li>
+                        <li>Provided assistance in sales and rentals.</li>
+                        <li>Acted as a liaison between buyers and real estate agents.</li>
+                        <li>Managed all software systems used for customer management and back-office support.</li>
+                    </ul>
+                </div>
+
+                <h3 class="titulo-generico">Researcher</h3>
+
+                <div class="col-narrow">
+                    <h3>Latin-American politics researcher</h3>
+                    <p class="uppercase">Centro de Estudios Nueva Mayoría</p>
+                    <p>July 2005 - December 2006</p>
+                </div>
+
+                <div class="col-wide job description">
+                    <ul>
+                        <li>Conducted electoral research and prepared pre-election assessment reports to provide information about elections in Latin American countries.</li>
+                        <li>Monitored regional elections</li>
+                        <li>Conducted research, processed and analyzed economic, political and social data.</li>
+                        <li>Prepared and submitted reports, articles and statistics for online publishing.</li>
+                    </ul>
 
                 </div>
 
 
-
-                UNDER CONSTRUCTION
 
 
 
