Modifiqué titulares de trabajo y puse años

--- a/index.html
+++ b/index.html
@@ -36,7 +36,12 @@
             <div class="content-wrap">
                 <h2>Work Experience</h2>
 
-                <h3 class="titulo-generico">Independent Business Development Consultant</h3>
+                <h3 class="profesion" style="text-align:left;">
+                    Independent Business Development Consultant
+                    <span style="float:right;">
+                        2016 - 2019
+                    </span>
+                </h3>
 
                 <div class="col-narrow">
                     <h3>Project #1: <br>
@@ -112,7 +117,9 @@
                     </ul>
                 </div>
 
-                <h3 class="titulo-generico">Management auditor at public agencies</h3>
+                <h3 class="profesion" style="text-align: left;">Management auditor at public agencies
+                    <span style="float: right;">2012 -2016</span>
+                </h3>
 
                 <div class="col-narrow">
                     <h3>Auditing Officer</h3>
@@ -147,7 +154,10 @@
                     </ul>
                 </div>
 
-                <h3 class="titulo-generico">Administrative clerk</h3>
+                <h3 class="profesion" style="text-align: left;">Administrative clerk
+                    <span style="float: right;">2007 - 2011</span>
+
+                </h3>
 
                 <div class="col-narrow">
                     <h3>Real Estate Administrative Assistant</h3>
@@ -164,7 +174,10 @@
                     </ul>
                 </div>
 
-                <h3 class="titulo-generico">Researcher</h3>
+                <h3 class="profesion" style="text-align: left;">Researcher
+                        <span style="float: right;">2005 - 2006</span>
+    
+                    </h3>
 
                 <div class="col-narrow">
                     <h3>Latin-American politics researcher</h3>
@@ -174,7 +187,8 @@
 
                 <div class="col-wide job description">
                     <ul>
-                        <li>Conducted electoral research and prepared pre-election assessment reports to provide information about elections in Latin American countries.</li>
+                        <li>Conducted electoral research and prepared pre-election assessment reports to provide
+                            information about elections in Latin American countries.</li>
                         <li>Monitored regional elections</li>
                         <li>Conducted research, processed and analyzed economic, political and social data.</li>
                         <li>Prepared and submitted reports, articles and statistics for online publishing.</li>
