--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
 
 <body>
     <!-- // Intro -->
-    <header>
+    <header id="about">
+        <nav>
+            <a href="#about">About</a>
+            <a href="#work">Work Experience</a>
+            <a href="#education">Education</a>
+            <a href="#contact">Contact</a>
+        </nav>
         <div class="content-wrap">
             <img class="profile-img col-narrow" src="images/francisco-paterson.jpg" alt="Francisco Paterson">
             <div class="col-wide">
@@ -28,11 +34,12 @@
                 </ul>
             </div>
         </div>
+        <a href="Resume.pdf" class="btn download" download="">Download PDF</a>
     </header>
 
     <main>
         <!-- // Work Experience -->
-        <section class="work">
+        <section class="work" id="work">
             <div class="content-wrap">
                 <h2>Work Experience</h2>
 
@@ -195,17 +202,12 @@
                     </ul>
 
                 </div>
-
-
-
-
-
             </div>
             <!--content-wrap-->
         </section>
 
         <!-- // Education -->
-        <section class="education">
+        <section class="education" id="education">
             <div class="content-wrap">
                 <h2>Education</h2>
 
@@ -235,7 +237,7 @@
     </main>
 
     <!-- // Footer & contact info -->
-    <footer>
+    <footer id="contact">
         <div class="content-wrap">
             <h2>Let's Keep in Touch!</h2>
 
