Puse media queries, nueva bio, nuevo background

--- a/index.html
+++ b/index.html
@@ -24,17 +24,16 @@
             <div class="col-wide">
                 <h1>Francisco Paterson</h1>
                 <h2>Data Science and IT student</h2>
-                <ul>
-                    <li>Professional training at Harvard Executive Education, M.A. in Development Management and Policy
-                        (Georgetown University/University of San Martín, Buenos Aires, Argentina), B.A. in Political
-                        Science (University of Buenos Aires, Argentina).</li>
-                    <li>Business Developer specialized in start-ups.</li>
-                    <li>Public management auditor.</li>
-                    <li>Areas of expertise: lobbying, domestic and international affairs (politics and trade), public
-                        relations.</li>
-                </ul>
+                <p> Switching to IT from the social sciences. I am currently studying Data Science at Acámica and have
+                    finished a front-end development course at Coderhouse. I have had professional training at Harvard
+                    Kennedy School, and earned an M.A. in Development Management and Policy
+                    (Georgetown University/UNSAM, Buenos Aires), a postgraduate diploma in
+                    Public Policy from FLACSO, and a B.A. in Political
+                    Science from the University of Buenos Aires.
+                    Business Developer specialized in start-ups, former public management auditor.
+                    </p>
             </div>
-        </div>       
+        </div>
     </header>
 
     <main>
@@ -182,9 +181,9 @@
                 </div>
 
                 <h3 class="profesion" style="text-align: left;">Researcher
-                        <span style="float: right;">2005 - 2006</span>
-    
-                    </h3>
+                    <span style="float: right;">2005 - 2006</span>
+
+                </h3>
 
                 <div class="col-narrow">
                     <h3>Latin-American politics researcher</h3>
@@ -219,18 +218,18 @@
 
                 <h3>Harvard University, Kennedy School Executive Education, 2018</h3>
                 <p>“Creating Collaborative Solutions: Innovations in Governance” <br> Management course focused on
-                    inter-institutional collaboration for the joint creation of public value.</p>
+                    inter-institutional collaboration for the joint creation of public value</p>
 
                 <h3>Georgetown University (Washington D.C.)/Universidad de San Martín (Buenos Aires), 2019</h3>
-                <p>Joint bilingual M.A. in Development Management and Policy.</p>
+                <p>Joint bilingual M.A. in Development Management and Policy</p>
 
                 <h3>Latin American Faculty of Social Sciences, (FLACSO) Argentina, 2014</h3>
-                <p>Postgraduate Diploma in Management and Control of Public Policies.</p>
+                <p>Postgraduate Diploma in Management and Control of Public Policies</p>
 
                 <h3> University of Buenos Aires. Argentina, 2010</h3>
-                <p>B.A. in Political Science. <br>
+                <p>B.A. in Political Science <br>
                     According to the QS World University Rankings (2017/18) the University of Buenos Aires is the best
-                    ranked university in Latin America (2017/18 QS Global World Ranking #= 75).</p>
+                    ranked university in Latin America (2017/18 QS Global World Ranking #= 75)</p>
             </div>
         </section>
         <!--content-wrap-->
